--- a/src/css/ChallengeMenu.css
+++ b/src/css/ChallengeMenu.css
@@ -67,31 +67,31 @@
 #ChallengeMenu li.offline
 {
 	color		: #777777;
-	background-image: url('../images/challenge_menu/disable.png');
+	background-image: url('~images/challenge_menu/disable.png');
 	background-repeat: no-repeat;
 }
 
 #ChallengeMenu li.undefined
 {
-	background-image: url('../images/challenge_menu/disable.png');
+	background-image: url('~images/challenge_menu/disable.png');
 	background-repeat: no-repeat;
 }
 
 #ChallengeMenu li.random
 {
-	background-image: url('../images/random.png');
+	background-image: url('~images/random.png');
 	background-repeat: no-repeat;
 }
 
 #ChallengeMenu li.white
 {
-	background-image: url('../images/invite_white_pawn.png');
+	background-image: url('~images/invite_white_pawn.png');
 	background-repeat: no-repeat;
 }
 
 #ChallengeMenu li.black
 {
-	background-image: url('../images/invite_black_pawn.png');
+	background-image: url('~images/invite_black_pawn.png');
 	background-repeat: no-repeat;
 }
 
@@ -137,13 +137,13 @@
 }
 #ChallengeMenu li #private.true
 {
-	background-image: url('../images/challenge_menu/observer.png');
+	background-image: url('~images/challenge_menu/observer.png');
 	background-repeat: no-repeat;
 }
 
 #ChallengeMenu li #private.false
 {
-	background-image: url('../images/challenge_menu/observer_disable.png');
+	background-image: url('~images/challenge_menu/observer_disable.png');
 	background-repeat: no-repeat;
 }
 
