--- a/src/css/Contacts.css
+++ b/src/css/Contacts.css
@@ -36,7 +36,7 @@
 
 #Main #Left #Contact #ContactTitle li {
 /*	background-color	: #216778; */
-	background-image: url('../images/left_title_bg_inactive.png');
+	background-image: url('~images/left_title_bg_inactive.png');
 	cursor			: pointer;
 	float			: left;
 	height			: 14px;
@@ -56,7 +56,7 @@
 
 #Main #Left #Contact #ContactTitle li.contact_selec {
 	border-color	: #FFA200;
-	background-image: url('../images/left_title_bg.png');
+	background-image: url('~images/left_title_bg.png');
 }
 
 #Main #Left #Contact #UserLists {
@@ -180,108 +180,108 @@
 
 /* available */
 #Main #Left .user_available {
-	background		: url('../images/user_available.png') no-repeat;
+	background		: url('~images/user_available.png') no-repeat;
 }
 
 /* unavailable */
 #Main #Left .user_unavailable {
-	background		: url('../images/user_unavailable.png') no-repeat;
+	background		: url('~images/user_unavailable.png') no-repeat;
 }
 
 /* away */
 #Main #Left .user_away {
-	background		: url('../images/user_away.png') no-repeat;
+	background		: url('~images/user_away.png') no-repeat;
 }
 
 /* busy */
 #Main #Left .user_busy {
-	background		: url('../images/user_busy.png') no-repeat;
+	background		: url('~images/user_busy.png') no-repeat;
 }
 
 /* playing */
 #Main #Left .user_playing {
-	background		: url('../images/user_playing.png') no-repeat;
+	background		: url('~images/user_playing.png') no-repeat;
 }
 
 /* offline */
 #Main #Left .user_offline {
-	background		: url('../images/user_offline.png') no-repeat;
+	background		: url('~images/user_offline.png') no-repeat;
 }
 
 /* admin */
 
 /* available */
 #Main #Left .admin_available {
-	background		: url('../images/admin_available.png') no-repeat;
+	background		: url('~images/admin_available.png') no-repeat;
 }
 
 /* unavailable */
 #Main #Left .admin_unavailable {
-	background		: url('../images/admin_unavailable.png') no-repeat;
+	background		: url('~images/admin_unavailable.png') no-repeat;
 }
 
 /* away */
 #Main #Left .admin_away {
-	background		: url('../images/admin_away.png') no-repeat;
+	background		: url('~images/admin_away.png') no-repeat;
 }
 
 /* busy */
 #Main #Left .admin_busy {
-	background		: url('../images/admin_busy.png') no-repeat;
+	background		: url('~images/admin_busy.png') no-repeat;
 }
 
 /* playing */
 #Main #Left .admin_playing {
-	background		: url('../images/admin_playing.png') no-repeat;
+	background		: url('~images/admin_playing.png') no-repeat;
 }
 
 /* offline */
 #Main #Left .admin_offline {
-	background		: url('../images/admin_offline.png') no-repeat;
+	background		: url('~images/admin_offline.png') no-repeat;
 }
 
 /* teacher */
 
 /* available */
 #Main #Left .teacher_available {
-	background		: url('../images/teacher_available.png') no-repeat;
+	background		: url('~images/teacher_available.png') no-repeat;
 }
 
 /* unavailable */
 #Main #Left .teacher_unavailable {
-	background		: url('../images/teacher_unavailable.png') no-repeat;
+	background		: url('~images/teacher_unavailable.png') no-repeat;
 }
 
 /* away */
 #Main #Left .teacher_away {
-	background		: url('../images/teacher_away.png') no-repeat;
+	background		: url('~images/teacher_away.png') no-repeat;
 }
 
 /* busy */
 #Main #Left .teacher_busy {
-	background		: url('../images/teacher_busy.png') no-repeat;
+	background		: url('~images/teacher_busy.png') no-repeat;
 }
 
 /* playing */
 #Main #Left .teacher_playing {
-	background		: url('../images/teacher_playing.png') no-repeat;
+	background		: url('~images/teacher_playing.png') no-repeat;
 }
 
 /* offline */
 #Main #Left .teacher_offline {
-	background		: url('../images/teacher_offline.png') no-repeat;
+	background		: url('~images/teacher_offline.png') no-repeat;
 }
 
 /* robot */
 
 /* available */
 #Main #Left .robot_available {
-	background		: url('../images/robot_available.png') no-repeat;
+	background		: url('~images/robot_available.png') no-repeat;
 }
 
 /* offline */
 #Main #Left .robot_offline {
-	background		: url('../images/robot_offline.png') no-repeat;
+	background		: url('~images/robot_offline.png') no-repeat;
 }
 
 /* Search user */
