--- a/src/css/Board.css
+++ b/src/css/Board.css
@@ -54,6 +54,10 @@
 	background-image	: url('~images/board/square_select.png');
 }*/
 
+#Board div:hover {
+	background-image	: url('~images/board/square_select.png');
+}
+
 
 #BoardPiece{
 	position		: static;
