--- a/src/css/Chat.css
+++ b/src/css/Chat.css
@@ -35,7 +35,7 @@
 /* HTML Elemenets */
 #Chat #ChatList li {
 	float			: left;
-	width			: 25%;
+	width			: 300px;
 	position		: relative;
 /*	border : 1px solid green;
 	background-color : green; */
