--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -20,10 +20,13 @@
 	width				:	80px;
 }
 
-#ProfileDiv #ProfPhotoDiv img{
+#ProfileDiv #ProfPhotoDiv div {
 	width		: 50px;
 	height		: 60px;
 	padding-bottom: 2px;
+	background-position: center center;
+	background-size: cover;
+	margin-left: 16px;
 }
 
 #ProfileDiv #TopRightDiv {
